# MakeWorldKoreanViaWeb

./: README.md  package-lock.json
backend/: .env  .gitignore  Dockerfile  Dockerfile.pip  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements2.txt
backend/app/: main.py
backend/app/database/: mongodb.py
backend/app/images/ocr_results/: 0128016b-c7a1-454c-83ad-6ab69c01b925_bbox.json  27a8a478-e3e6-44bb-a75f-0a21533bcbe0_bbox.json  2c09c8f1-4c28-4e78-9b31-8ba499d5ceff_bbox.json  450336dc-cb59-497c-a414-c7a9ab651930_bbox.json  48b9baab-3bf8-4e52-9206-1e876809fdb9_bbox.json  4e47ae72-e6e5-4a48-b3a9-a5f8d0dd33b1_bbox.json  570a98ff-489b-4429-b86f-4c3273efcdd3_bbox.json  5915cb55-5b8a-46f8-8263-0408b0c791e3_bbox.json  6fea160e-0f50-456d-a587-8ebdf73f1b16_bbox.json  77aaa660-605f-4dd4-9295-0bf60fd076e0_bbox.json  7c512d9f-afea-43ad-a1ba-51cfef44a404_bbox.json  86307fd0-6bf9-4639-9bd2-3d917fb2c9e8_bbox.json  8bab2188-fe37-4ca2-91d3-2b7bf7b50bd5_bbox.json  9244c3ad-3371-49b8-869e-e89edd48204e_bbox.json  94278556-5264-4d1f-a78d-c3e8d7b5db2b_bbox.json  99afa852-9b68-4b64-8909-b56582354403_bbox.json  9af77edf-41c7-49a6-8d11-e1315aac3fbf_bbox.json  b6dc6ecc-90c4-4e94-b72c-1b9bbb62457c_bbox.json  e0b88cf4-92af-4d50-a848-805e2f48b196_bbox.json  e73f7fd5-1a15-4ed8-89e7-10c8de9ece7d_bbox.json
backend/app/models/: request.py  response.py
backend/app/routes/: text_detection.py  translation.py
backend/app/services/: __init__.py  ocr_processor.py  text_detection.py  translation.py  translation_processor.py
backend/examples/: i_s_info.json  translated_output.json
backend/indictrans/: Dockerfile  processor.py
backend/srnet/: Dockerfile  cfg.py  main.py  pyproject.toml  srnet_processor.py
docs/assets/: IMG_4155.HEIC
frontend/: .env  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  Route.jsx
frontend/src/components/: ImageUpload copy.jsx  ImageUpload.jsx  Main.css  MainNav.css  MainNav.jsx  Output copy.jsx  Output.jsx  Select copy.jsx  Select.jsx
frontend/src/components/1initPage/: BrandingSection.jsx  Header.jsx  InputDesign copy.jsx  InputDesign.jsx  LanguageSelector.jsx  UploadArea editing.jsx  UploadArea.jsx  UploadSection.jsx
frontend/src/components/2secondPage/: ActionButtons.jsx  DocumentArea.jsx  LanguageSelector2.jsx  SelectionScreen0 editing.jsx  SelectionScreen0.jsx
frontend/src/components/3resultPage/: NavigationButtons.jsx  OriginalTextPanel.jsx  TranslatedImgPanel.jsx  TranslatedTextPanel.jsx  TranslationContent.jsx  TranslationResult0.jsx
frontend/src/insta/: main.jsx
frontend/src/router/: aechaeRouter.jsx
(+18 files in other folders)
