[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.12",
    "motor>=3.5.1",
    "opencv-python-headless>=4.11.0.86",
    "paddleocr==2.6.1.3",
    "paddlepaddle==2.4.2",
    "pillow>=10.4.0",
    "pydantic>=2.10.6",
    "pymongo>=4.10.1",
    "python-dotenv>=1.0.1",
    "setuptools>=75.3.2",
    "uvicorn>=0.33.0",
]
