[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.0.1",
    "bitsandbytes>=0.45.5",
    "datasets>=3.1.0",
    "fastapi>=0.115.12",
    "mock>=5.2.0",
    "mosestokenizer>=1.2.1",
    "motor>=3.5.1",
    "nltk>=3.9.1",
    "numpy==1.24.4",
    "opencv-python-headless==4.8.1.78",
    "paddleocr==2.6.1.3",
    "paddlepaddle==2.4.2",
    "pandas>=2.0.3",
    "pillow>=10.4.0",
    "pydantic>=2.10.6",
    "pymongo>=4.10.1",
    "python-dotenv>=1.0.1",
    "regex>=2024.11.6",
    "sacremoses>=0.1.1",
    "scipy>=1.10.1",
    "sentencepiece>=0.2.0",
    "setuptools>=75.3.2",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.33.2",
    "uvicorn>=0.33.0",
]
